--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -17,10 +17,13 @@
 }
 
 .main {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   font-size: 6vh;
-  color: blue;
+  color: #26f;
 }
 
 .center {
